Base Plan view. Working on Terraform/ CircleCI view for build

--- a/ui/ng-ui/src/app/components/step/step.component.scss
+++ b/ui/ng-ui/src/app/components/step/step.component.scss
@@ -1,7 +1,7 @@
 .step {
   .step-info {
     height: auto;
-    background-color: #f5f5f5;
+    background-color: white;
     border-radius: 1.25rem;
     cursor: pointer;
     transition: background-color 0.3s ease-in-out;
