--- a/ui/ng-ui/src/app/pages/plan/plan.component.html
+++ b/ui/ng-ui/src/app/pages/plan/plan.component.html
@@ -1,14 +1,12 @@
 <mat-card class="laforge-card">
-  <mat-card-header>
-    <mat-card-title-group>
+  <mat-card-header *ngIf="loaded">
       <mat-card-title>Plan</mat-card-title>
       <mat-card-subtitle>Construct a plan for a LaForge environment from your git branch</mat-card-subtitle>
       <mat-card-subtitle><b>Name:</b> {{ environment.Name }}</mat-card-subtitle>
       <mat-card-subtitle><b>Description:</b> {{ environment.Description }}</mat-card-subtitle>
       <mat-card-subtitle><b>Maintainer:</b> {{ environment.maintainer.name }} &lt;{{ environment.maintainer.email }}&gt;</mat-card-subtitle>
-    </mat-card-title-group>
   </mat-card-header>
-  <mat-card-content>
-    <app-team *ngFor="let team of environment.build.teams" [team]="team"></app-team>
-  </mat-card-content>
+    <mat-card-content *ngIf="loaded">
+        <app-team-tree *ngFor="let team of environment.build.teams" [team]="team" [selectable]="selectionMode"></app-team-tree>
+    </mat-card-content>
 </mat-card>
