--- a/ui/ng-ui/src/app/pages/plan/plan.component.html
+++ b/ui/ng-ui/src/app/pages/plan/plan.component.html
@@ -6,7 +6,7 @@
       <mat-card-subtitle><b>Description:</b> {{ environment.Description }}</mat-card-subtitle>
       <mat-card-subtitle><b>Maintainer:</b> {{ environment.maintainer.name }} &lt;{{ environment.maintainer.email }}&gt;</mat-card-subtitle>
   </mat-card-header>
-    <mat-expansion-panel>
+    <mat-card-content *ngIf="loaded">
         <app-team-tree *ngFor="let team of environment.build.teams" [team]="team" [selectable]="selectionMode"></app-team-tree>
-    </mat-expansion-panel>
+    </mat-card-content>
 </mat-card>
